# tilecloud-chain

./: .coveragerc  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .prospector.yaml  .python-version  .secretsignore  .snyk  .sonarcloud.properties  .spelling  .travis.yml  AGENT.md  AGENTS.md  BACKPORT_TODO  CHANGELOG.md  CHANGES.md  CHANGES.rst  Chaines.dia  Dockerfile  LICENSE  MANIFEST.in  Makefile  OpenLayers-build.cfg  Pipfile  README.md  README.rst  SECURITY.md  TODO  application.ini  buildout.cfg  dev-requirements.txt  development.ini  docker-compose.override.sample.yaml  docker-compose.sample.override.yaml  (+23 more)
.circleci/: config.yml  deploy  dockercfg.enc  pypirc.enc
.dependabot/: config.yaml
.github/: copilot-instructions.md  dependabot.yaml  dependabot.yml  dpkg-versions.yaml  publish.yaml  renovate.json  renovate.json5  spell-ignore-words.txt
.github/workflows/: audit.yaml  backport.yaml  changelog.yaml  ci.yaml  clean-dockerhub-tag.yaml  clean.yaml  codeql.yaml  dependabot-auto-merge.yaml  main.yaml  pr-checks.yaml  rebuild-112-113.yaml  rebuild-113.yaml  rebuild-114.yaml  rebuild-115.yaml  rebuild-old.yaml  rebuild.yaml
ci/: .snyk  clean-dockerhub-tag  config.yaml  docker-config.json.tmpl  dpkg-versions.yaml  publish  pypirc.tmpl  requirements.txt
docker/: Dockerfile  run
docker/mapcache-docker/: mapcache.xml
docker/mapfile-docker/: mapserver.map  test.mapnik
docker/test-db/: 10_init.sql  20_init.sql  Dockerfile
example/: config.yaml  sbb.yaml  sbb_verbund.mapnik  wmtsutfgrid.html  wmtsutfgrid.js
example/tilegeneration/: config-postgresql.yaml  config-postgressql.yaml  config.yaml
tilecloud_chain/: CONFIG.md  HOST_LIMIT.md  OpenLayers-style.css  OpenLayers.js  USAGE.rst  __init__.py  amazon.py  configuration.py  controller.py  copy_.py  cost.py  database_logger.py  expiretiles.py  format.py  generate.py  generate_tiles.py  generate_tiles_controller.py  host-limit-schema.json  host_limit.py  internal_mapcache.py  main.py  mapcache_config.jinja  mapcache_config_template.py  mapnik_.py  multitilestore.py  openlayers.html  openlayers.js  openlayers.py  openlayers_html.py  openlayers_js.py  schema-cache-s3.yaml  schema-layer-mapnik.yaml  schema-layer-wms.yaml  schema.json  schema.py  schema.yaml  security.py  server.py  settings.py  tilegeneration.py  (+3 more)
tilecloud_chain/admin/: __init__.py  views.py
tilecloud_chain/filter/: error.py
tilecloud_chain/ogcapi/: __init__.py  views.py
tilecloud_chain/scaffolds/: __init__.py
tilecloud_chain/scaffolds/create/: buildout_tilegeneration.cfg_tmpl
tilecloud_chain/scaffolds/create/tilegeneration/: +dot+gitignore  buildout.cfg_tmpl  config.yaml  config.yaml.in  config.yaml.in_tmpl  config.yaml.mako_tmpl  deploy.cfg.in_tmpl
tilecloud_chain/scaffolds/create/tilegeneration/hooks/: post-restaure-code  post_restaure_code.sh
tilecloud_chain/scaffolds/ec2/tilegeneration/: deploy.cfg.mako_tmpl
tilecloud_chain/store/: __init__.py  azure_storage_blob.py  filesystem.py  mapnik_.py  postgres.py  postgresql.py  url.py
tilecloud_chain/templates/: admin_index.html  openlayers.html  openlayers.html_  openlayers_.html  wmts_get_capabilities.jinja
tilecloud_chain/tests/: __init__.py  apache.conf  create-deploy.sh  create_test_data.sh  deploy.cfg  mapfile.map  test-authorised.yaml  test.mapnik  test.yaml  test_admin.py  test_config.py  test_controller.py  test_copy.py  test_cost.py  test_error.py  test_expiretiles.py  test_generate.py  test_mapcache.py  test_multi_grid.py  test_multihost.py  test_postgres.py  test_postgresql.py  test_serve.py  test_ui.py  test_url_store.py  wrong_mapnik_grid_meta.yaml  wrong_resolutions.yaml  wrong_type.yaml
tilecloud_chain/tests/hooks/: post-restore-code  post-restore-database
tilecloud_chain/tests/mapfile/: mapfile.map  test.mapnik
tilecloud_chain/tests/tilegeneration/: deploy.cfg  test-apache-s3-tilesurl.yaml  test-authorised.yaml  test-bsddb.yaml  test-capabilities.yaml  test-copy.yaml  test-esb.yaml  test-external-mapcache.yaml  test-fix.yaml  test-geoms-datasource.yaml  test-int-grid.yaml  test-internal-mapcache.yaml  test-legends-items.yaml  test-legends.yaml  test-multi-grid.yaml  test-multidim.yaml  test-multigeom.yaml  test-no-legends.yaml  test-nodim.yaml  test-nosns.yaml  test-postgresql.yaml  test-redis-main.yaml  test-redis-project.yaml  test-redis.yaml  test-serve-wmtscapabilities.yaml  test-serve.yaml  test.yaml  test_fix.yaml  wrong_map.yaml  wrong_mapnik_grid_meta.yaml  wrong_resolutions.yaml  wrong_sequence.yaml  wrong_srs.yaml  wrong_srs_auth.yaml  wrong_srs_id.yaml  wrong_type.yaml
tilecloud_chain/tests/tilegeneration/geoms/: mask.geojson
tilecloud_chain/tests/tilegeneration/hooks/: post-create-database
tilecloud_chain/views/: admin.py  index.py  serve.py
