[tool.black]
line-length = 110
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
strict = true

[tool.isort]
profile = "black"
line_length = 110
known_first_party = "tilecloud"
known_third_party = "c2cwsgiutils"

[tool.poetry]
name = "tilecloud-chain"
version = "0.0.0"
description = "Tools to generate tiles from WMS or Mapnik, to S3, Berkeley DB, MBTiles, or local filesystem in WMTS layout using Amazon cloud services."
readme = "README.md"
authors = ["Camptocamp <info@camptocamp.com>"]
repository = "https://github.com/camptocamp/tilecloud-chain"
license = "BSD-2-Clause"
keywords = ["gis", "tilecloud", "chain"]
packages = [{ include = "tilecloud_chain" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Pyramid",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
include = ["tilecloud_chain/py.typed", "tilecloud_chain/*.rst", "tilecloud_chain/*.md"]

[tool.poetry.scripts]
generate-tiles = "tilecloud_chain.generate:main"
generate-controller = "tilecloud_chain.controller:main"
generate-cost = "tilecloud_chain.cost:main"
generate-copy = "tilecloud_chain.copy_:main"
generate-process = "tilecloud_chain.copy_:process"
import-expiretiles = "tilecloud_chain.expiretiles:main"

[tool.poetry.plugins."pyramid.scaffold"]
tilecloud_chain = "tilecloud_chain.scaffolds:Create"

[tool.poetry.plugins."paste.app_factory"]
main = "tilecloud_chain.server:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
c2cwsgiutils = { version = "6.0.9", extras = ["standard", "broadcast", "oauth2", "debug"] }
pyramid-mako = "1.1.0"
python-dateutil = "2.9.0.post0"
tilecloud = { version = "1.12.10", extras = ["azure", "aws", "redis", "wsgi"] }
Jinja2 = "3.1.6"
PyYAML = "6.0.3"
Shapely = "2.0.7"
jsonschema = "4.21.1"
pyramid = "2.0.2"
jsonschema-validator-new = "0.1.0"
azure-storage-blob = "12.19.1"
waitress = "3.0.2"
certifi = "2025.10.5"
azure-identity = { version = "1.16.1", optional = true }
cryptography = "46.0.5"
gunicorn = "23.0.0"
idna = { version = "3.7", optional = true }
pillow = "12.1.1"
requests = "2.32.5"
urllib3 = "2.6.3"
sentry-sdk = "2.8.0"
webob = "1.8.9"
azure-core = "1.38.0"

[tool.poetry.dev-dependencies]
prospector = { extras = ["with_mypy", "with_bandit", "with_pyroma"], version = "1.10.3" }
c2cwsgiutils = { version = "6.0.9", extras = ["test_images"] }
scikit-image = { version = "0.22.0" }
pytest = "8.0.2"
testfixtures = "8.1.0"
coverage = "7.4.4"
types-redis = "4.6.0.20241004"
types-requests = "2.31.0.6"

[tool.poetry.group.dev.dependencies]
prospector-profile-duplicated = "1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "version_branch" -%}
{{serialize_pep440(bump_version(base, 1 if env.get("IS_MASTER") == "TRUE" else 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"
