[tool.black]
line-length = 110
target-version = ['py38']

[tool.poetry]
name = 'scan-to-paperless'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.8,!=3.9.0,!=3.9.1,<3.11"
c2cwsgiutils = "5.0.4"
pyramid-mako = "1.1.0"
python-dateutil = "2.8.2"
tilecloud = "1.8.2"
Jinja2 = "3.1.6"
PyYAML = "6.0.3"
Shapely = "1.8.5.post1"
cee_syslog_handler = "0.6.0" # c2cwsgiutils
gunicorn = "23.0.0" # c2cwsgiutils
objgraph = "3.5.0" # c2cwsgiutils
psycopg2 = "2.9.10" # c2cwsgiutils
pyramid-tm = "2.4" # c2cwsgiutils
sentry-sdk = "2.8.0" # c2cwsgiutils
sqlalchemy = "1.4.54" # c2cwsgiutils
transaction = "3.0.1" # c2cwsgiutils
ujson = "5.4.*" # c2cwsgiutils
cornice = "6.0.1" # c2cwsgiutils
"zope.sqlalchemy" = "1.3" # c2cwsgiutils
jsonschema = "4.4.0"
pyramid = "2.0.2"
jsonschema-gentypes = "1.0.0"
azure-storage-blob = "12.13.*"
bottle = "0.12.25"
mako = "1.2.4"
oauthlib = "3.2.2"
cryptography = "46.0.5"
Pillow = "12.1.1"
certifi = "2026.1.4"
redis = "4.4.4"
requests = "2.32.4"
# Workaround to be able to do the lock file update
urllib3 = "1.26.20"
idna = "3.7"
azure-identity = "1.16.1"
zipp = "3.19.3"
webob = "1.8.9"

[tool.poetry.dev-dependencies]
coverage = "6.3.3"
testfixtures = "6.18.5"
pytest = "7.0.1"
prospector = { extras = ["with_mypy", "with_bandit"], version = "1.7.7" }
types-redis = "4.1.22"
types-requests = "2.27.31"
