[tool.ruff]
line-length = 110
target-version = "py310"
exclude = ["test_*.py", "tilecloud_chain/tests/__init__.py", "tilecloud_chain/configuration.py"]

[tool.ruff.lint]
select = []
ignore = ["ANN401", "C90", "D100", "D104", "D105", "D107", "D200", "D202", "D207", "D208", "D212", "E501", "EM101", "EM102", "ERA001", "FA", "FBT001", "FBT002", "FIX002", "I001", "PERF203", "PLC0415", "PLR09", "PLR2004", "Q000", "S101", "S113", "SIM105", "T201", "TD002", "W293"]
extend-select = ["UP", "I", "S", "B", "ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]
"**/tests/**" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]
"**/test_*.py" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]
"**/*_test.py" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
# Minimal version should also be set in the jsonschema-gentypes.yaml file
python = ">=3.11,<3.14"
c2casgiutils = { version = "0.6.3", extras = ["all"] }
fastapi = {extras = ["standard"], version = "0.134.0"}
python-dateutil = "2.9.0.post0"
tilecloud = { version = "1.13.5", extras = ["azure", "aws", "redis", "wsgi"] }
Jinja2 = "3.1.6"
PyYAML = "6.0.3"
Shapely = "2.1.2"
jsonschema = "4.26.0"
jsonschema-validator-new = "0.3.2"
azure-storage-blob = "12.28.0"
certifi = "2026.2.25"
Paste = "3.10.1"
psutil = "7.2.2"
pyproj = "3.7.2"
aiohttp = "3.13.3"
sqlalchemy = { version = "2.0.47", extras = ["asyncio"] }
anyio = "4.12.1"
asyncpg = "0.31.0"
html-sanitizer = "2.6.0"

[tool.poetry.group.dev.dependencies]
prospector = { extras = ["with_mypy", "with_bandit", "with_pyroma", "with_ruff"], version = "1.17.3" }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.26.5"
c2cwsgiutils = { version = "6.1.8", extras = ["test_images"] }
scikit-image = { version = "0.26.0" }
pytest = "8.4.2"
testfixtures = "10.0.0"
coverage = "7.13.4"
types-redis = "4.6.0.20241004"
types-requests = "2.32.4.20260107"
pytest-asyncio = "1.3.0"
pytest-check = "2.7.2"
types-pyyaml = "6.0.12.20250915"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[project]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Pyramid',
    'Intended Audience :: Other Audience',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering :: GIS',
    'Typing :: Typed',
]
dynamic = ["dependencies", "version"]
name = "tilecloud-chain"
description = "Tools to generate tiles from WMS or Mapnik, to S3, Berkeley DB, MBTiles, or local filesystem in WMTS layout using Amazon cloud services."
readme = "README.md"
keywords = ["gis", "tilecloud", "chain"]
license = "BSD-2-Clause"
authors = [{name = "Camptocamp",email = "info@camptocamp.com"}]
packages = [{ include = "tilecloud_chain" }]
include = ["tilecloud_chain/py.typed", "tilecloud_chain/*.rst", "tilecloud_chain/*.md"]
requires-python = ">=3.10"
dependencies = ["c2cwsgiutils[broadcast,debug,oauth2,standard]", "python-dateutil", "tilecloud[aws,azure,redis,wsgi]", "Jinja2", "PyYAML", "Shapely", "jsonschema", "jsonschema-validator-new", "azure-storage-blob", "certifi", "Paste", "psutil", "pyproj", "psycopg[binary]", "aiohttp", "sqlalchemy[asyncio]", "pytest-asyncio", "anyio", "asyncpg", "nest-asyncio", "c2casgiutils[all]", "fastapi[standard]", "html-sanitizer"]

[project.urls]
repository = "https://github.com/camptocamp/tilecloud-chain"
"Bug Tracker" = "https://github.com/camptocamp/tilecloud-chain/issues"

[project.scripts]
generate-tiles = "tilecloud_chain.generate:main"
generate-controller = "tilecloud_chain.controller:main"
generate-cost = "tilecloud_chain.cost:main"
generate-copy = "tilecloud_chain.copy_:main"
generate-process = "tilecloud_chain.copy_:process"
import-expiretiles = "tilecloud_chain.expiretiles:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
